[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automating-receipt-aws"
version = "0.1.0"
description = "Automated receipt processing using AWS Textract, Lambda, DynamoDB, and SES"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "boto3>=1.34.0",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"